5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1846_1275.log
== TEST (2019-06-22 14:59:41) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array([eval(input("numero: "))])
 print(n)

-- ERROR:
File "XXXX", line 4
    print(n)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 14:59:55) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array([eval(input("numero: "))])
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:02:42) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array([eval(input("numero: "))])
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:02:43) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array([eval(input("numero: "))])
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:02:43) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array([eval(input("numero: "))])
print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:03:04) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array([eval(input("numero: "))])
m=shape(n)[0]
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:03:45) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array([eval(input("numero: "))])
m=shape(n)[0]
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:06:58) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=int(input("numero: "))
m=array(n)
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:08:02) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=int(input("numero: "))
m=array(n)
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:12:20) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))


print(n)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:20:28) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
col=shape(n)[1]
som=0
for i in range(col):
	som=som+n[0,i]
	

print(som)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:24:08) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
col=shape(n)[1]
som1=0
som2=0
som3=0
som4=0
for i in range(col):
	som1=som+n[0,i]
for i in range(col):
	som2=som2+n[1,i]
for i in range(col):
	som3=som3+n[2,i]
for i in range(col):
	som4=som4+n[3,i]

print(som)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:25:20) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
col=shape(n)[1]
som1=0
som2=0
som3=0
som4=0
for i in range(col):
	som1=som1+n[0,i]
for i in range(col):
	som2=som2+n[1,i]
for i in range(col):
	som3=som3+n[2,i]
for i in range(col):
	som4=som4+n[3,i]
vet	

print([som1,som2,som3,som4])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:25:31) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
col=shape(n)[1]
som1=0
som2=0
som3=0
som4=0
for i in range(col):
	som1=som1+n[0,i]
for i in range(col):
	som2=som2+n[1,i]
for i in range(col):
	som3=som3+n[2,i]
for i in range(col):
	som4=som4+n[3,i]
vet	

print([som1,som2,som3,som4])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:25:58) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
col=shape(n)[1]
som1=0
som2=0
som3=0
som4=0
for i in range(col):
	som1=som1+n[0,i]
for i in range(col):
	som2=som2+n[1,i]
for i in range(col):
	som3=som3+n[2,i]
for i in range(col):
	som4=som4+n[3,i]
vet	

print([som1,som2,som3,som4])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:26:20) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
col=shape(n)[1]
som1=0
som2=0
som3=0
som4=0
for i in range(col):
	som1=som1+n[0,i]
for i in range(col):
	som2=som2+n[1,i]
for i in range(col):
	som3=som3+n[2,i]
for i in range(col):
	som4=som4+n[3,i]
	

print([som1,som2,som3,som4])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 15:27:29) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
col=shape(n)[1]
som1=0
som2=0
som3=0
som4=0
for i in range(col):
	som1=som1+n[0,i]
for i in range(col):
	som2=som2+n[1,i]
for i in range(col):
	som3=som3+n[2,i]
for i in range(col):
	som4=som4+n[3,i]
	

print([som1,som2,som3,som4])

-- EXECUTION TIME:
1.23086
-- TEST CASE 1:
---- input:
[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,4],[7,3,4,7,5,6,1],[0,2,3,10,1,6,10],[7,8,0,10,7,3,5],[2,3,2,3,0,3,6]]
---- correct output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
---- user output:
[35, 41, 31, 39]
-- TEST CASE 2:
---- input:
[[3,9,2,0,7,2,3],[0,5,3,6,2,9,7],[9,3,5,10,7,0,8],[7,5,8,1,7,1,9],[5,4,4,5,0,8,6],[4,6,8,4,0,2,8],[9,9,4,10,3,2,2],[6,4,1,9,8,5,1],[8,0,3,1,9,8,1],[3,7,9,5,5,1,0],[2,1,0,5,7,7,3],[0,6,2,4,0,0,1],[3,8,5,1,9,2,10],[7,1,2,0,9,10,7],[8,2,10,7,5,1,10],[9,10,1,3,0,5,5],[0,10,3,7,3,9,8],[1,8,4,0,8,1,5],[0,7,2,3,1,6,8],[0,1,6,1,9,4,10],[1,1,4,0,1,5,6]]
---- correct output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
---- user output:
[26, 32, 42, 38]
-- TEST CASE 3:
---- input:
[[0,3,1,8,4,1,3],[3,6,0,4,4,9,7],[10,10,1,8,1,2,3],[3,2,5,2,7,0,2],[0,5,6,9,3,6,3],[8,2,9,8,7,9,4],[10,10,5,1,5,2,4],[7,1,8,4,8,7,0],[9,6,4,2,6,4,9],[5,1,6,10,4,6,4],[9,10,2,2,3,5,1],[6,5,9,3,5,7,5],[9,8,1,7,7,6,2],[2,7,5,8,8,5,5],[8,2,1,2,9,7,6],[1,2,9,5,8,3,10],[2,2,0,4,6,1,6],[6,7,4,1,5,3,2],[3,7,1,2,6,8,10],[0,2,5,3,7,1,6],[8,1,3,9,2,0,1],[4,8,3,5,10,8,8],[7,5,7,9,1,7,2],[2,9,8,4,2,0,8],[2,6,9,7,4,0,9],[3,9,0,4,1,1,0],[6,7,6,5,6,7,1]]
---- correct output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33 37
 18 38]
---- user output:
[20, 33, 35, 21]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 15:34:06) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(m)[1]
l=shape(m)[0]
z=zeros(l,dtype=int)

for i in range(l)
	for j in range(c):
		z[i]=z[i]+m[i,j]

print(z)

-- EXECUTION TIME:
0.692677
-- ERROR:
  File "/home/codebench/codes/1846/1275/main.py", line 8
    for i in range(l)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:34:10) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(m)[1]
l=shape(m)[0]
z=zeros(l,dtype=int)

for i in range(l)
	for j in range(c):
		z[i]=z[i]+m[i,j]

print(z)

-- ERROR:
File "XXXX", line 8
    for i in range(l)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 15:34:18) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(m)[1]
l=shape(m)[0]
z=zeros(l,dtype=int)

for i in range(l):
	for j in range(c):
		z[i]=z[i]+m[i,j]

print(z)

-- EXECUTION TIME:
0.850732
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1275/main.py", line 4, in <module>
    c=shape(m)[1]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:34:19) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(m)[1]
l=shape(m)[0]
z=zeros(l,dtype=int)

for i in range(l):
	for j in range(c):
		z[i]=z[i]+m[i,j]

print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:34:44) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(l,dtype=int)

for i in range(l):
	for j in range(c):
		z[i]=z[i]+m[i,j]

print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 15:34:45) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(l,dtype=int)

for i in range(l):
	for j in range(c):
		z[i]=z[i]+m[i,j]

print(z)

-- EXECUTION TIME:
0.96279
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1275/main.py", line 10, in <module>
    z[i]=z[i]+m[i,j]
NameError: name 'm' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:35:00) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(l,dtype=int)

for i in range(l):
	for j in range(c):
		z[i]=z[i]+n[i,j]

print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 15:35:02) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(l,dtype=int)

for i in range(l):
	for j in range(c):
		z[i]=z[i]+n[i,j]

print(z)

-- EXECUTION TIME:
1.15054
-- TEST CASE 1:
---- input:
[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,4],[7,3,4,7,5,6,1],[0,2,3,10,1,6,10],[7,8,0,10,7,3,5],[2,3,2,3,0,3,6]]
---- correct output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
---- user output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
-- TEST CASE 2:
---- input:
[[3,9,2,0,7,2,3],[0,5,3,6,2,9,7],[9,3,5,10,7,0,8],[7,5,8,1,7,1,9],[5,4,4,5,0,8,6],[4,6,8,4,0,2,8],[9,9,4,10,3,2,2],[6,4,1,9,8,5,1],[8,0,3,1,9,8,1],[3,7,9,5,5,1,0],[2,1,0,5,7,7,3],[0,6,2,4,0,0,1],[3,8,5,1,9,2,10],[7,1,2,0,9,10,7],[8,2,10,7,5,1,10],[9,10,1,3,0,5,5],[0,10,3,7,3,9,8],[1,8,4,0,8,1,5],[0,7,2,3,1,6,8],[0,1,6,1,9,4,10],[1,1,4,0,1,5,6]]
---- correct output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
---- user output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
-- TEST CASE 3:
---- input:
[[0,3,1,8,4,1,3],[3,6,0,4,4,9,7],[10,10,1,8,1,2,3],[3,2,5,2,7,0,2],[0,5,6,9,3,6,3],[8,2,9,8,7,9,4],[10,10,5,1,5,2,4],[7,1,8,4,8,7,0],[9,6,4,2,6,4,9],[5,1,6,10,4,6,4],[9,10,2,2,3,5,1],[6,5,9,3,5,7,5],[9,8,1,7,7,6,2],[2,7,5,8,8,5,5],[8,2,1,2,9,7,6],[1,2,9,5,8,3,10],[2,2,0,4,6,1,6],[6,7,4,1,5,3,2],[3,7,1,2,6,8,10],[0,2,5,3,7,1,6],[8,1,3,9,2,0,1],[4,8,3,5,10,8,8],[7,5,7,9,1,7,2],[2,9,8,4,2,0,8],[2,6,9,7,4,0,9],[3,9,0,4,1,1,0],[6,7,6,5,6,7,1]]
---- correct output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33 37
 18 38]
---- user output:
numero: [20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33
 37 18 38]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 15:35:14) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(l,dtype=int)

for i in range(l):
	for j in range(c):
		z[i]=z[i]+n[i,j]

print(z)

-- EXECUTION TIME:
1.05744
-- TEST CASE 1:
---- input:
[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,4],[7,3,4,7,5,6,1],[0,2,3,10,1,6,10],[7,8,0,10,7,3,5],[2,3,2,3,0,3,6]]
---- correct output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
---- user output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
-- TEST CASE 2:
---- input:
[[3,9,2,0,7,2,3],[0,5,3,6,2,9,7],[9,3,5,10,7,0,8],[7,5,8,1,7,1,9],[5,4,4,5,0,8,6],[4,6,8,4,0,2,8],[9,9,4,10,3,2,2],[6,4,1,9,8,5,1],[8,0,3,1,9,8,1],[3,7,9,5,5,1,0],[2,1,0,5,7,7,3],[0,6,2,4,0,0,1],[3,8,5,1,9,2,10],[7,1,2,0,9,10,7],[8,2,10,7,5,1,10],[9,10,1,3,0,5,5],[0,10,3,7,3,9,8],[1,8,4,0,8,1,5],[0,7,2,3,1,6,8],[0,1,6,1,9,4,10],[1,1,4,0,1,5,6]]
---- correct output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
---- user output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
-- TEST CASE 3:
---- input:
[[0,3,1,8,4,1,3],[3,6,0,4,4,9,7],[10,10,1,8,1,2,3],[3,2,5,2,7,0,2],[0,5,6,9,3,6,3],[8,2,9,8,7,9,4],[10,10,5,1,5,2,4],[7,1,8,4,8,7,0],[9,6,4,2,6,4,9],[5,1,6,10,4,6,4],[9,10,2,2,3,5,1],[6,5,9,3,5,7,5],[9,8,1,7,7,6,2],[2,7,5,8,8,5,5],[8,2,1,2,9,7,6],[1,2,9,5,8,3,10],[2,2,0,4,6,1,6],[6,7,4,1,5,3,2],[3,7,1,2,6,8,10],[0,2,5,3,7,1,6],[8,1,3,9,2,0,1],[4,8,3,5,10,8,8],[7,5,7,9,1,7,2],[2,9,8,4,2,0,8],[2,6,9,7,4,0,9],[3,9,0,4,1,1,0],[6,7,6,5,6,7,1]]
---- correct output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33 37
 18 38]
---- user output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33
 37 18 38]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 15:35:30) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(l,dtype=int)

for i in range(l):
	for j in range(c):
		z[i]=z[i]+n[i,j]

print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 15:35:35) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(l,dtype=int)

for i in range(l):
	for j in range(c):
		z[i]=z[i]+n[i,j]

print(z)

-- EXECUTION TIME:
1.21259
-- TEST CASE 1:
---- input:
[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,4],[7,3,4,7,5,6,1],[0,2,3,10,1,6,10],[7,8,0,10,7,3,5],[2,3,2,3,0,3,6]]
---- correct output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
---- user output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
-- TEST CASE 2:
---- input:
[[3,9,2,0,7,2,3],[0,5,3,6,2,9,7],[9,3,5,10,7,0,8],[7,5,8,1,7,1,9],[5,4,4,5,0,8,6],[4,6,8,4,0,2,8],[9,9,4,10,3,2,2],[6,4,1,9,8,5,1],[8,0,3,1,9,8,1],[3,7,9,5,5,1,0],[2,1,0,5,7,7,3],[0,6,2,4,0,0,1],[3,8,5,1,9,2,10],[7,1,2,0,9,10,7],[8,2,10,7,5,1,10],[9,10,1,3,0,5,5],[0,10,3,7,3,9,8],[1,8,4,0,8,1,5],[0,7,2,3,1,6,8],[0,1,6,1,9,4,10],[1,1,4,0,1,5,6]]
---- correct output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
---- user output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
-- TEST CASE 3:
---- input:
[[0,3,1,8,4,1,3],[3,6,0,4,4,9,7],[10,10,1,8,1,2,3],[3,2,5,2,7,0,2],[0,5,6,9,3,6,3],[8,2,9,8,7,9,4],[10,10,5,1,5,2,4],[7,1,8,4,8,7,0],[9,6,4,2,6,4,9],[5,1,6,10,4,6,4],[9,10,2,2,3,5,1],[6,5,9,3,5,7,5],[9,8,1,7,7,6,2],[2,7,5,8,8,5,5],[8,2,1,2,9,7,6],[1,2,9,5,8,3,10],[2,2,0,4,6,1,6],[6,7,4,1,5,3,2],[3,7,1,2,6,8,10],[0,2,5,3,7,1,6],[8,1,3,9,2,0,1],[4,8,3,5,10,8,8],[7,5,7,9,1,7,2],[2,9,8,4,2,0,8],[2,6,9,7,4,0,9],[3,9,0,4,1,1,0],[6,7,6,5,6,7,1]]
---- correct output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33 37
 18 38]
---- user output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33
 37 18 38]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 15:58:03) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(l,dtype=int)

for i in range(l):
	for j in range(c):
		z[i]=z[i]+n[i,j]

print(z)

-- EXECUTION TIME:
0.849085
-- TEST CASE 1:
---- input:
[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,4],[7,3,4,7,5,6,1],[0,2,3,10,1,6,10],[7,8,0,10,7,3,5],[2,3,2,3,0,3,6]]
---- correct output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
---- user output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
-- TEST CASE 2:
---- input:
[[3,9,2,0,7,2,3],[0,5,3,6,2,9,7],[9,3,5,10,7,0,8],[7,5,8,1,7,1,9],[5,4,4,5,0,8,6],[4,6,8,4,0,2,8],[9,9,4,10,3,2,2],[6,4,1,9,8,5,1],[8,0,3,1,9,8,1],[3,7,9,5,5,1,0],[2,1,0,5,7,7,3],[0,6,2,4,0,0,1],[3,8,5,1,9,2,10],[7,1,2,0,9,10,7],[8,2,10,7,5,1,10],[9,10,1,3,0,5,5],[0,10,3,7,3,9,8],[1,8,4,0,8,1,5],[0,7,2,3,1,6,8],[0,1,6,1,9,4,10],[1,1,4,0,1,5,6]]
---- correct output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
---- user output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
-- TEST CASE 3:
---- input:
[[0,3,1,8,4,1,3],[3,6,0,4,4,9,7],[10,10,1,8,1,2,3],[3,2,5,2,7,0,2],[0,5,6,9,3,6,3],[8,2,9,8,7,9,4],[10,10,5,1,5,2,4],[7,1,8,4,8,7,0],[9,6,4,2,6,4,9],[5,1,6,10,4,6,4],[9,10,2,2,3,5,1],[6,5,9,3,5,7,5],[9,8,1,7,7,6,2],[2,7,5,8,8,5,5],[8,2,1,2,9,7,6],[1,2,9,5,8,3,10],[2,2,0,4,6,1,6],[6,7,4,1,5,3,2],[3,7,1,2,6,8,10],[0,2,5,3,7,1,6],[8,1,3,9,2,0,1],[4,8,3,5,10,8,8],[7,5,7,9,1,7,2],[2,9,8,4,2,0,8],[2,6,9,7,4,0,9],[3,9,0,4,1,1,0],[6,7,6,5,6,7,1]]
---- correct output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33 37
 18 38]
---- user output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33
 37 18 38]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 18:01:32) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=7
l=shape(n)[0]
z=zeros(l,dtype=int)

for i in range(l):
	for j in range(c):
		z[i]=z[i]+n[i,j]

print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 18:01:37) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=7
l=shape(n)[0]
z=zeros(l,dtype=int)

for i in range(l):
	for j in range(c):
		z[i]=z[i]+n[i,j]

print(z)

-- EXECUTION TIME:
1.17103
-- TEST CASE 1:
---- input:
[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,4],[7,3,4,7,5,6,1],[0,2,3,10,1,6,10],[7,8,0,10,7,3,5],[2,3,2,3,0,3,6]]
---- correct output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
---- user output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
-- TEST CASE 2:
---- input:
[[3,9,2,0,7,2,3],[0,5,3,6,2,9,7],[9,3,5,10,7,0,8],[7,5,8,1,7,1,9],[5,4,4,5,0,8,6],[4,6,8,4,0,2,8],[9,9,4,10,3,2,2],[6,4,1,9,8,5,1],[8,0,3,1,9,8,1],[3,7,9,5,5,1,0],[2,1,0,5,7,7,3],[0,6,2,4,0,0,1],[3,8,5,1,9,2,10],[7,1,2,0,9,10,7],[8,2,10,7,5,1,10],[9,10,1,3,0,5,5],[0,10,3,7,3,9,8],[1,8,4,0,8,1,5],[0,7,2,3,1,6,8],[0,1,6,1,9,4,10],[1,1,4,0,1,5,6]]
---- correct output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
---- user output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
-- TEST CASE 3:
---- input:
[[0,3,1,8,4,1,3],[3,6,0,4,4,9,7],[10,10,1,8,1,2,3],[3,2,5,2,7,0,2],[0,5,6,9,3,6,3],[8,2,9,8,7,9,4],[10,10,5,1,5,2,4],[7,1,8,4,8,7,0],[9,6,4,2,6,4,9],[5,1,6,10,4,6,4],[9,10,2,2,3,5,1],[6,5,9,3,5,7,5],[9,8,1,7,7,6,2],[2,7,5,8,8,5,5],[8,2,1,2,9,7,6],[1,2,9,5,8,3,10],[2,2,0,4,6,1,6],[6,7,4,1,5,3,2],[3,7,1,2,6,8,10],[0,2,5,3,7,1,6],[8,1,3,9,2,0,1],[4,8,3,5,10,8,8],[7,5,7,9,1,7,2],[2,9,8,4,2,0,8],[2,6,9,7,4,0,9],[3,9,0,4,1,1,0],[6,7,6,5,6,7,1]]
---- correct output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33 37
 18 38]
---- user output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33
 37 18 38]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 18:01:47) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=8
l=shape(n)[0]
z=zeros(l,dtype=int)

for i in range(l):
	for j in range(c):
		z[i]=z[i]+n[i,j]

print(z)

-- EXECUTION TIME:
1.02352
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1275/main.py", line 10, in <module>
    z[i]=z[i]+n[i,j]
IndexError: index 7 is out of bounds for axis 1 with size 7

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 18:01:55) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=7
l=shape(n)[0]
z=zeros(l,dtype=int)

for i in range(l):
	for j in range(c):
		z[i]=z[i]+n[i,j]

print(z)

-- EXECUTION TIME:
0.91344
-- TEST CASE 1:
---- input:
[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,4],[7,3,4,7,5,6,1],[0,2,3,10,1,6,10],[7,8,0,10,7,3,5],[2,3,2,3,0,3,6]]
---- correct output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
---- user output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
-- TEST CASE 2:
---- input:
[[3,9,2,0,7,2,3],[0,5,3,6,2,9,7],[9,3,5,10,7,0,8],[7,5,8,1,7,1,9],[5,4,4,5,0,8,6],[4,6,8,4,0,2,8],[9,9,4,10,3,2,2],[6,4,1,9,8,5,1],[8,0,3,1,9,8,1],[3,7,9,5,5,1,0],[2,1,0,5,7,7,3],[0,6,2,4,0,0,1],[3,8,5,1,9,2,10],[7,1,2,0,9,10,7],[8,2,10,7,5,1,10],[9,10,1,3,0,5,5],[0,10,3,7,3,9,8],[1,8,4,0,8,1,5],[0,7,2,3,1,6,8],[0,1,6,1,9,4,10],[1,1,4,0,1,5,6]]
---- correct output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
---- user output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
-- TEST CASE 3:
---- input:
[[0,3,1,8,4,1,3],[3,6,0,4,4,9,7],[10,10,1,8,1,2,3],[3,2,5,2,7,0,2],[0,5,6,9,3,6,3],[8,2,9,8,7,9,4],[10,10,5,1,5,2,4],[7,1,8,4,8,7,0],[9,6,4,2,6,4,9],[5,1,6,10,4,6,4],[9,10,2,2,3,5,1],[6,5,9,3,5,7,5],[9,8,1,7,7,6,2],[2,7,5,8,8,5,5],[8,2,1,2,9,7,6],[1,2,9,5,8,3,10],[2,2,0,4,6,1,6],[6,7,4,1,5,3,2],[3,7,1,2,6,8,10],[0,2,5,3,7,1,6],[8,1,3,9,2,0,1],[4,8,3,5,10,8,8],[7,5,7,9,1,7,2],[2,9,8,4,2,0,8],[2,6,9,7,4,0,9],[3,9,0,4,1,1,0],[6,7,6,5,6,7,1]]
---- correct output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33 37
 18 38]
---- user output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33
 37 18 38]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 18:04:16) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=7
l=shape(n)[0]
z=zeros(l,dtype=int)

for i in range(l):
	for j in range(c):
		z[i]=z[i]+n[i,j]

print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:43:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

horas=array(eval(inpit("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for i range(shape(horas)[0]):
	zeros[i]=sum(horas[i,:])
	
print(zeros)		
-- ERROR:
File "XXXX", line 7
    for i range(shape(horas)[0]):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:43:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

horas=array(eval(inpit("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for i in range(shape(horas)[0]):
	zeros[i]=sum(horas[i,:])
	
print(zeros)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:44:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for i in range(shape(horas)[0]):
	zeros[i]=sum(horas[i,:])
	
print(zeros)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 15:44:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for i in range(shape(horas)[0]):
	zeros[i]=sum(horas[i,:])
	
print(zeros)		
-- EXECUTION TIME:
1.03092
-- TEST CASE 1:
---- input:
[[8,9,0,2,7,0,9],[6,1,9,10,10,5,0],[7,4,8,5,5,1,1],[4,5,6,10,4,5,5],[9,2,4,4,5,1,9],[0,1,4,9,5,8,8],[10,2,6,4,6,8,7],[2,10,7,2,10,7,5],[4,7,2,9,1,1,5],[0,5,6,2,3,7,4],[10,1,6,10,4,9,6],[7,10,6,1,2,2,4],[7,3,4,7,5,6,1],[0,2,3,10,1,6,10],[7,8,0,10,7,3,5],[2,3,2,3,0,3,6]]
---- correct output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
---- user output:
[35 41 31 39 34 35 43 43 29 27 46 32 33 32 40 19]
-- TEST CASE 2:
---- input:
[[3,9,2,0,7,2,3],[0,5,3,6,2,9,7],[9,3,5,10,7,0,8],[7,5,8,1,7,1,9],[5,4,4,5,0,8,6],[4,6,8,4,0,2,8],[9,9,4,10,3,2,2],[6,4,1,9,8,5,1],[8,0,3,1,9,8,1],[3,7,9,5,5,1,0],[2,1,0,5,7,7,3],[0,6,2,4,0,0,1],[3,8,5,1,9,2,10],[7,1,2,0,9,10,7],[8,2,10,7,5,1,10],[9,10,1,3,0,5,5],[0,10,3,7,3,9,8],[1,8,4,0,8,1,5],[0,7,2,3,1,6,8],[0,1,6,1,9,4,10],[1,1,4,0,1,5,6]]
---- correct output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
---- user output:
[26 32 42 38 32 32 39 34 30 30 25 13 38 36 43 33 40 27 27 31 18]
-- TEST CASE 3:
---- input:
[[0,3,1,8,4,1,3],[3,6,0,4,4,9,7],[10,10,1,8,1,2,3],[3,2,5,2,7,0,2],[0,5,6,9,3,6,3],[8,2,9,8,7,9,4],[10,10,5,1,5,2,4],[7,1,8,4,8,7,0],[9,6,4,2,6,4,9],[5,1,6,10,4,6,4],[9,10,2,2,3,5,1],[6,5,9,3,5,7,5],[9,8,1,7,7,6,2],[2,7,5,8,8,5,5],[8,2,1,2,9,7,6],[1,2,9,5,8,3,10],[2,2,0,4,6,1,6],[6,7,4,1,5,3,2],[3,7,1,2,6,8,10],[0,2,5,3,7,1,6],[8,1,3,9,2,0,1],[4,8,3,5,10,8,8],[7,5,7,9,1,7,2],[2,9,8,4,2,0,8],[2,6,9,7,4,0,9],[3,9,0,4,1,1,0],[6,7,6,5,6,7,1]]
---- correct output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33 37
 18 38]
---- user output:
[20 33 35 21 32 47 37 35 40 36 32 40 40 40 35 38 21 28 37 24 24 46 38 33
 37 18 38]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
